# IW

./: .gitignore  AbstractIWSearch.cpp  AbstractIWSearch.hpp  CMakeLists.txt  IW1Search.cpp  IW1Search.hpp  IW3OnlySearch.cpp  IW3OnlySearch.hpp  README.md  SearchTree.cpp  SearchTree.hpp  TreeNode.cpp  TreeNode.hpp  ale.cfg  all_exparr.py  exparr.py  main.cpp  plot_explored.py  random_tools.h  replay.cpp
runs/3actions-run-2/: ale.cfg
runs/3actions-seed-1234/: ale.cfg  log.txt
runs/3actions-seed-1235/: ale.cfg
runs/3actions-seed-1236/: ale.cfg
runs/frameskip10/: ale.cfg  log.txt
runs/no-minimal/: ale.cfg  log.txt
show-screens/: ale.cfg  start.2
show-screens/norand2/: ale.cfg  exparr_000.txt  exparr_001.txt  exparr_002.txt  exparr_003.txt  exparr_004.txt  exparr_005.txt  exparr_006.txt  exparr_007.txt  exparr_008.txt  exparr_009.txt  exparr_010.txt  exparr_011.txt  exparr_012.txt
show-screens/rand2/: ale.cfg  exparr_000.txt  exparr_001.txt  exparr_002.txt  exparr_003.txt  exparr_004.txt  exparr_005.txt  exparr_006.txt  exparr_007.txt  exparr_008.txt  exparr_009.txt  exparr_010.txt  exparr_011.txt  exparr_012.txt
